zno-macro-draft/tests/ui/err/name-is-not-an-assignment-expression.stderr
error: invalid argument
 --> tests/ui/err/name-is-not-an-assignment-expression.rs:3:1
  |
3 | #[zno("b")]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `zno` (in Nightly builds, run with -Z macro-backtrace for more info)
